--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="google_maps_API_key">AIzaSyBlq-pJhhwCd1omJY3rshfJUspPxtZDkSI</string>
+
     <string name="app_name">TransLogistics-App</string>
     <string name="lblRecId">Rec ID:</string>
     <string name="lblPackageId">Package ID:</string>
